--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>This is index page</p>
-  </body>
+
+  <% include ./partials/header%>
+
+<body>
+
+  <div class="row">
+    <div class="col-sm-7">
+      <img src="/images/frontPage.PNG" width="800" height="650" alt="Nature Reach">
+
+    </div>
+    <div class="col-sm-4">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <h3 style="color: blue;">Welcome to Nature Reach</h3>
+      <form>
+        <div class="form-group" method="POST">
+          <label>Email address</label>
+          <input type="email" class="form-control" id="emailID" placeholder="Enter email/Student ID">
+
+        </div>
+        <div class="form-group">
+          <label>Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        </div>
+
+        <button type="submit" class="btn btn-primary">Login</button>
+      </form>
+      <a href="#"> Create account</a>
+      
+      <br>
+      <a href="/homepage">Skip Login</a>
+    </div>
+  </div>
+
+  <% include ./partials/scripts%>
+</body>
 </html>
