--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -15,13 +15,13 @@ and open the template in the editor.
                 <img src="/images/Pic1.jpg" class="img-fluid" width="300" height="90" alt="College logo">
             </div>
             <div class="col-sm-2">
-                <p>sjyfaywgeufawjbd</p>
+                <p>Some text about bird</p>
             </div>
             <div class="col-sm-3">
                 <img src="/images/Pic2.jpg" class="img-fluid" width="300" height="90" alt="College logo">
             </div>
             <div class="col-sm-2">
-                <p>sjyfaywgeufawjbd</p>
+                <p>Some text about bird</p>
             </div>
         </div>
         <br>
@@ -30,13 +30,13 @@ and open the template in the editor.
                 <img src="/images/Pic3.jpg" class="img-fluid" width="300" height="90" alt="College logo">
             </div>
             <div class="col-sm-2">
-                <p>sjyfaywgeufawjbd</p>
+                <p>Some text about bird</p>
             </div>
             <div class="col-sm-3">
                 <img src="/images/Pic4.jpg" class="img-fluid" width="300" height="90" alt="College logo">
             </div>
             <div class="col-sm-2">
-                <p>sjyfaywgeufawjbd</p>
+                <p>Some text about bird</p>
             </div>
         </div>
     </div>
