--- a/views/settings/settings.ejs
+++ b/views/settings/settings.ejs
@@ -17,6 +17,7 @@ and open the template in the editor.
         <h1> Settings</h1>
         <a href="/settings/animals/animalHomePage" class="btn btn-primary"> Animals</a>
         <a href="/settings/medicines/medicinesHopePage" class="btn btn-primary"> Medicine</a>
+        <a href="/settings/foodType/foodType" class="btn btn-primary"> Food Type</a>
 
         <% include ./partials/scripts%>
     </body>
