--- a/views/feeding/feeding.ejs
+++ b/views/feeding/feeding.ejs
@@ -6,17 +6,19 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <html>
-    <%- include ./partials/header %>
+    <%- include ../partials/header %>
 
 
     <body >
         
-        <% include ./partials/navbar %>
+        <% include ../partials/navbar %>
         <br>
-
-        <h1>Feeding</h1>
+        <div class="container">
+            <h1>Feeding</h1>
+        </div>
         
-        <% include ./partials/scripts%>
+        
+        <% include ../partials/scripts%>
     </body>
 </html>
 
