--- a/views/settings/animals/updateAnimal.ejs
+++ b/views/settings/animals/updateAnimal.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<% include ../partials/header %>
+<% include ../../partials/header %>
 
 <body>
-    <% include ../partials/navbar %>
+    <% include ../../partials/navbar %>
 
     <div class="container">
         <h1>Update Bird</h1>
@@ -29,7 +29,7 @@
 
     </div>
 
-    <% include ./partials/scripts%>
+    <% include ../../partials/scripts%>
 </body>
 
 </html>
