--- a/views/settings/animals/animalHomePage.ejs
+++ b/views/settings/animals/animalHomePage.ejs
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
-<% include ../partials/header %>
+<% include ../../partials/header %>
 
 <body>
-    <% include ../partials/navbar %>
+    <% include ../../partials/navbar %>
 
     <div class="container">
         
+               
         <a href="/settings/animals/addAnimal" class="btn btn-primary"> Add Brid</a>
         <a href="/settings/animals/updateAnimal" class="btn btn-primary"> Update Bird</a>
 
 
     </div>
 
-    <% include ./partials/scripts%>
+    <% include ../../partials/scripts%>
 </body>
 
 </html>
