--- a/views/settings/medicines/medicinesHomePage.ejs
+++ b/views/settings/medicines/medicinesHomePage.ejs
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
-<% include ../partials/header %>
+<% include ../../partials/header %>
 
 <body>
-    <% include ../partials/navbar %>
+    <% include ../../partials/navbar %>
 
     <div class="container">
         
-        <a href="/settings/medicines/addMedcinis" class="btn btn-primary"> Add Medicine</a>
+        <a href="/settings/medicines/addMedicins" class="btn btn-primary"> Add Medicine</a>
         <a href="/settings/medicines/updateMedicins" class="btn btn-primary"> Update Medicine</a>
 
 
     </div>
 
-    <% include ./partials/scripts%>
+    <% include ../../partials/scripts%>
 </body>
 
 </html>
