--- a/views/settings/medicines/updateMedicins.ejs
+++ b/views/settings/medicines/updateMedicins.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<% include ../partials/header %>
+<% include ../../partials/header %>
 
 <body>
-    <% include ../partials/navbar %>
+    <% include ../../partials/navbar %>
 
     <div class="container">
         
@@ -12,7 +12,7 @@
 
     </div>
 
-    <% include ./partials/scripts%>
+    <% include ../../partials/scripts%>
 </body>
 
 </html>
