--- a/views/settings/animals/addAnimal.ejs
+++ b/views/settings/animals/addAnimal.ejs
@@ -6,11 +6,25 @@
     <% include ../../partials/navbar %>
 
     <div class="container">
-        <h1>Add Bird</h1>
-
-    
-
-    </div>
+        <h1>Create Animal</h1>
+     
+        <form method="POST" action="settings/animals/addAnimal">
+         <div class="form-group">
+           <label for="species">Species</label>
+           <input type="text" class="form-control" id="species" placeholder="Enter species" name="species">
+         </div>
+         <div class="form-group">
+           <label for="nickName">Nickname</label>
+           <input type="text" class="form-control" id="nickName" placeholder="Enter nickname" name="nickName">
+         </div>
+         <div class="form-check">
+           <input type="checkbox" class="form-check-input" id="enabled" name="enabled">
+           <label class="form-check-label" for="enabled">Enabled</label>
+         </div>
+         <button type="submit" class="btn btn-primary">Submit</button>
+       </form>
+      
+       </div>
 
     <% include ../../partials/scripts%>
 </body>
