--- a/views/settings/animals/animalHomePage.ejs
+++ b/views/settings/animals/animalHomePage.ejs
@@ -9,12 +9,40 @@
         
                
         <a href="/settings/animals/addAnimal" class="btn btn-primary"> Add Brid</a>
-        <a href="/settings/animals/updateAnimal" class="btn btn-primary"> Update Bird</a>
+        <table id="animalTable" class="table table-bordered table-striped">
+    
+            <thead>
+              <tr>
+                <td>Species</td>
+                <td>Nickname</td>
+                <td>Enabled</td>
+                <td>Action</td>
+              </tr>
+            </thead>
+        
+             <% for(var i=0; i < data.length; i++) { %>
+                <tr>
+                 <td><%=data[i].species%></td>
+                 <td><%=data[i].nickName%></td>
+                 <td><%=data[i].enabled%></td>
+                 <td><a href="/settings/animals/updateAnimal?id=<%= data[i]._id %>"><img src="https://img.icons8.com/android/24/000000/edit.png"/></a> 
+                  <a  href="/settings/animals/deleteAnimal?id=<%= data[i]._id %>" onclick="return confirm('Are you sure you want to delete this?')"><img src="https://img.icons8.com/fluent-systems-filled/24/000000/trash.png"/></a></td>
+                </tr>
+             <% } %>
+             </table>
+       <!-- <a href="/settings/animals/updateAnimal" class="btn btn-primary"> Update Bird</a> -->
 
 
     </div>
 
     <% include ../../partials/scripts%>
+    <script type="text/javascript">
+        $(document).ready( function () {
+          $('#animalTable').DataTable({
+            responsive: true
+          });
+        });
+      </script>
 </body>
 
 </html>
