--- a/views/settings/animals/addAnimal.ejs
+++ b/views/settings/animals/addAnimal.ejs
@@ -8,7 +8,7 @@
     <div class="container">
         <h1>Create Animal</h1>
      
-        <form method="POST" action="settings/animals/addAnimal">
+        <form method="POST" action="#">
          <div class="form-group">
            <label for="species">Species</label>
            <input type="text" class="form-control" id="species" placeholder="Enter species" name="species">
