--- a/views/settings/animals/updateAnimal.ejs
+++ b/views/settings/animals/updateAnimal.ejs
@@ -8,7 +8,7 @@
     <div class="container">
         <h1>Update Animal</h1>
      
-        <form method="POST" action="settings/animals/updateAnimal">
+        <form method="POST" action="#">
          <input type="hidden" name="id" value="<%=data._id%>" />
      
          <div class="form-group">
