--- a/views/settings/settings.ejs
+++ b/views/settings/settings.ejs
@@ -16,7 +16,7 @@ and open the template in the editor.
         <h1> Settings</h1>
         <a href="/settings/animals/animalHomePage" class="btn btn-primary"> Animals</a>
         <a href="/settings/medicines/medicinesHomePage" class="btn btn-primary"> Medicine</a>
-        <a href="/settings/foodType/foodType" class="btn btn-primary"> Food Type</a>
+        <a href="/foodType" class="btn btn-primary"> Food Type</a>
     </div>
     <% include ../partials/scripts%>
 </body>
