--- a/views/foodType/foodTypeHomePage.ejs
+++ b/views/foodType/foodTypeHomePage.ejs
@@ -18,14 +18,7 @@
               </tr>
             </thead>
         
-             <% for(var i=0; i < data.length; i++) { %>
-                <tr>
-                 <td><%=data[i].name%></td>
-                 
-                 <td><a href="/foodType/updateFoodType?id=<%= data[i]._id %>"><img src="https://img.icons8.com/android/24/000000/edit.png"/></a> 
-                  <a  href="/foodType/deleteFoodType?id=<%= data[i]._id %>" onclick="return confirm('Are you sure you want to delete this?')"><img src="https://img.icons8.com/fluent-systems-filled/24/000000/trash.png"/></a></td>
-                </tr>
-             <% } %>
+             <!-- You can't render data here until you actually pass it from the back-end -->
              </table>
        
 
