--- a/views/medicines/addMedicines.ejs
+++ b/views/medicines/addMedicines.ejs
@@ -9,12 +9,12 @@
     <div class="row">
       <div class="col-sm-3"></div>
       <div class="col-sm-5">
-        <h3>Add Food Type</h3>
+        <h3>Add Medicines</h3>
         <br>
-        <form method="POST" action="/foodType/addFoodType">
+        <form method="POST" action="/medicines/addMedicines">
           <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" placeholder="Enter name" name="name">
+            <input type="text" class="form-control" id="name" placeholder="Enter medicine name" name="name">
           </div>
 
           <button type="submit" class="btn btn-primary">Submit</button>
