--- a/views/foodType/foodTypeHomePage.ejs
+++ b/views/foodType/foodTypeHomePage.ejs
@@ -3,45 +3,72 @@
 <% include ../partials/header %>
 
 <body>
-    <% include ../partials/navbar %>
+  <% include ../partials/navbar %>
 
-    <div class="container">
-        
-               
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-1"></div>
+      <div class="col-sm-4">
+        <h2><strong>Food Types</strong></h2>
+      </div>
+      <div class="col-sm-2"></div>
+      <div class="col-sm-3">
         <a href="/foodType/addFoodType" class="btn btn-primary"> Add Food</a>
-        <table id="foodType" class="table table-bordered table-striped">
-    
-            <thead>
-              <tr>
-                <td>Name</td>
-                
-              </tr>
-            </thead>
-        
-             <% for(var i=0; i < data.length; i++) { %>
-                <tr>
-                 <td><%=data[i].name%></td>
-                 
-                 <td><a href="/foodType/updateFoodType?id=<%= data[i]._id %>"><img src="https://img.icons8.com/android/24/000000/edit.png"/></a> 
-                  <a  href="/foodType/deleteFoodType?id=<%= data[i]._id %>" onclick="return confirm('Are you sure you want to delete this?')"><img src="https://img.icons8.com/fluent-systems-filled/24/000000/trash.png"/></a></td>
-                </tr>
-             <% } %>
-             </table>
-       
+      </div>
+    </div>
+<br>
+    <div class="row">
+      <div class="col-sm-1"></div>
+      <div class="col-sm-8">
 
+        <table id="foodType" class="table table-bordered table-striped table-hover  table-responsive-md">
 
+          <thead>
+            <tr>
+              <td>Name</td>
+              <td>Edit</td>
+              <td>Delete</td>
+
+            </tr>
+          </thead>
+
+          <% for(var i=0; i < data.length; i++) { %>
+          <tr>
+            <td><%=data[i].name%></td>
+
+            <td><a href="/foodType/updateFoodType?id=<%= data[i]._id %>"><img
+                  src="https://img.icons8.com/android/24/000000/edit.png" /></a> </td>
+            <td><a href="/foodType/deleteFoodType?id=<%= data[i]._id %>"
+                onclick="return confirm('Are you sure you want to delete this?')"><img
+                  src="https://img.icons8.com/fluent-systems-filled/24/000000/trash.png" /></a></td>
+          </tr>
+          <% } %>
+        </table>
+
+      </div>
     </div>
 
-    <% include ../partials/scripts%>
-    <script type="text/javascript">
-        $(document).ready( function () {
-          $('#foodType').DataTable({
-            responsive: true
-          });
-        });
-      </script>
+  </div>
 
-    
+  <% include ../partials/scripts%>
+ 
+ <style>
+  #foodType {
+      font-family: Arial, Helvetica, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+  }
+
+  #foodType thead {
+      padding-top: 12px;
+      padding-bottom: 12px;
+      text-align: left;
+      font-style: normal;
+      background-color: rgb(131, 253, 131);
+      color: black;
+  }
+</style>
+
 </body>
 
 </html>
