--- a/views/medicines/updateMedicines.ejs
+++ b/views/medicines/updateMedicines.ejs
@@ -5,24 +5,30 @@
 <body>
   <% include ../partials/navbar %>
 
+
   <div class="container">
     <div class="row">
       <div class="col-sm-3"></div>
       <div class="col-sm-5">
-        <h3>Add Food Type</h3>
+        <h3>Update Medicines</h3>
         <br>
-        <form method="POST" action="/foodType/addFoodType">
+
+
+        <form method="POST" action="/medicines/updateMedicines">
+          <input type="hidden" name="id" value="<%=data._id%>" />
+
           <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" placeholder="Enter name" name="name">
+            <input type="text" class="form-control" id="name" placeholder="Enter Name" name="name"
+              value="<%= data.name %>">
           </div>
-
+          <br>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+
       </div>
     </div>
   </div>
-
   <% include ../partials/scripts%>
 </body>
 
