--- a/views/settings/settings.ejs
+++ b/views/settings/settings.ejs
@@ -14,8 +14,8 @@ and open the template in the editor.
     <br>
     <div class="container">
         <h1> Settings</h1>
-        <a href="/settings/animals/animalHomePage" class="btn btn-primary"> Animals</a>
-        <a href="/settings/medicines/medicinesHomePage" class="btn btn-primary"> Medicine</a>
+        <a href="/animals" class="btn btn-primary"> Animals</a>
+        <a href="/medicines" class="btn btn-primary"> Medicine</a>
         <a href="/foodType" class="btn btn-primary"> Food Type</a>
     </div>
     <% include ../partials/scripts%>
