--- a/views/settings/settings.ejs
+++ b/views/settings/settings.ejs
@@ -17,6 +17,10 @@ and open the template in the editor.
         <a href="/animals" class="btn btn-primary"> Animals</a>
         <a href="/medicines" class="btn btn-primary"> Medicine</a>
         <a href="/foodType" class="btn btn-primary"> Food Type</a>
+        <br>
+        <h1>Application Settings </h1>
+        <a href="/user" class="btn btn-primary"> User</a>
+
     </div>
     <% include ../partials/scripts%>
 </body>
