--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,32 +10,42 @@
       <img src="/images/frontPage.PNG" width="800" height="650" alt="Nature Reach">
 
     </div>
-    <div class="col-sm-4">
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <h3 style="color: blue;">Welcome to Nature Reach</h3>
-      <form>
-        <div class="form-group" method="POST">
-          <label>Email address</label>
-          <input type="email" class="form-control" id="emailID" placeholder="Enter email/Student ID">
+    
 
-        </div>
-        <div class="form-group">
-          <label>Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-        </div>
+      <div class="col-sm-4">
 
-        <button type="submit" class="btn btn-primary">Login</button>
-      </form>
-      <a href="#"> Create account</a>
+        <br><br><br><br>
+        <h2>Welcom to Nature Reach</h2>
+        <br>
+          <h3>Login</h3>
 
-      <br>
-      <a href="/homepage">Skip Login</a>
-    </div>
+          <!-- show any messages that come back with authentication -->
+          <% if (message.length > 0) { %>
+          <div class="alert alert-danger"><%= message %></div>
+          <% } %>
+
+          <!-- LOGIN FORM -->
+          <form action="/" method="post">
+              <div class="form-group">
+                  <label>Email</label>
+                  <input required type="text" class="form-control" name="email">
+              </div>
+              <div class="form-group">
+                  <label>Password</label>
+                  <input required type="password" class="form-control" name="password">
+              </div>
+              <button type="submit" class="btn btn-warning btn-lg">Login</button>
+          </form>
+
+          <hr>
+
+          <p>New User? <a href="/signUpPage">Signup</a></p>
+         <!--<a href="/signUpPage"> Create account</a>-->
+
+          <br>
+          <a href="/homepage">Skip Login</a>
+      </div>
+  
   </div>
 
   <% include ./partials/scripts%>
