--- a/views/signUpPage.ejs
+++ b/views/signUpPage.ejs
@@ -13,7 +13,10 @@
     <div class="col-sm-2"></div>
     <div class="col-sm-3">
       <br>
-          
+           <!-- show any messages that come back with authentication -->
+           <% if (message.length > 0) { %>
+            <div class="alert alert-danger"><%= message %></div>
+            <% } %>
       
       
       
