--- a/views/feeding/feeding.ejs
+++ b/views/feeding/feeding.ejs
@@ -1,24 +1,95 @@
-
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
-    <%- include ../partials/header %>
+<% include ../partials/header %>
 
+<body>
+    <% include ../partials/navbar %>
 
-    <body >
-        
-        <% include ../partials/navbar %>
-        <br>
-        <div class="container">
-            <h1>Feeding</h1>
+    <div class="container">
+        <div class="row">
+           
+            <div class="col-sm-2">
+                <h2><strong>Feedings</strong></h2>
+            </div>
+            <div class="col-sm-5"></div>
+            <div class="col-sm-3">
+                <a href="/feeding/addFeedings" class="btn btn-primary"> Add Feedings</a>
+                <a href="/feeding/export" class="btn btn-primary"> Export Data</a>
+                
+            </div>
         </div>
-        
-        
-        <% include ../partials/scripts%>
-    </body>
-</html>
+        <br>
+        <div class="row">
+            <div class="col-sm-10">
+                <table id="feedings" class="table table-bordered table-striped table-hover  table-responsive-md">
 
+                    <thead>
+                        <tr>
+                            <td><strong> Date and Time</strong></td>
+                            <td><strong> Animal</strong></td>
+                            <td><strong> Food </strong></td>
+                            <td><strong> Medicine </strong></td>
+                            <td><strong> Goal Weight of Animal</strong></td>
+                            <td><strong> Actual Weight of Animal</strong></td>
+                            <td><strong> Amount of Food Fed</strong></td>
+                            <td><strong> Left Over of Food </strong></td>
+                            <td><strong> Comments</strong></td>
+                            <td><strong> Weather Conditions</strong></td>
+                            
+                            <td><strong> keeper Name </strong></td>
+                            <td><strong> Edit </strong></td>
+                            <td><strong>Delete</strong></td>
+
+                        </tr>
+                    </thead>
+
+                    <% for(var i=0; i < data.length; i++) { %>
+                    <tr>
+                        <td><%=data[i].dateTime.toLocaleDateString("en-US")%></td>
+                        <td><%=data[i].animalSpecies%>(<%=data[i].animalNickName%>)</td>
+                        <td><%=data[i].food%></td>
+                        <td><%=data[i].medicine%></td>
+                        <td><%=data[i].goalWeightOfAnimal%>g</td>
+                        <td><%=data[i].actualWeightOfAnimal%>g</td>
+                        <td><%=data[i].amountOfFoodFed%>g</td>
+                        <td><%=data[i].leftoverFood%>g</td>
+                        <td><%=data[i].comments%></td>
+                        <td><%=data[i].weatherConditions%></td>
+                        <td><%=data[i].keeperName%></td>
+                        
+                        <td><a href="/feeding/Feedings?id=<%= data[i]._id %>"><img
+                                    src="https://img.icons8.com/android/24/000000/edit.png" /></a> </td>
+
+                        <td><a href="/feeding/deleteFeedings?id=<%= data[i]._id %>"
+                                onclick="return confirm('Are you sure you want to delete this?')"><img
+                                    src="https://img.icons8.com/fluent-systems-filled/24/000000/trash.png" /></a></td>
+                    </tr>
+                    <% } %>
+                </table>
+            </div>
+        </div>
+
+    </div>
+
+    <% include ../partials/scripts%>
+    
+    <style>
+        #feedings {
+            font-family: Arial, Helvetica, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        #feedings thead {
+            padding-top: 12px;
+            padding-bottom: 12px;
+            text-align: left;
+            font-style: normal;
+            background-color: rgb(131, 253, 131);
+            color: black;
+        }
+    </style>
+
+</body>
+
+</html>
