--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,16 +10,16 @@
 
 
         <nav id="navbar_top" class="navbar navbar-dark bg-dark navbar-expand-lg mb-5">
-            <a class="navbar-brand"  href="/homepage"><span>Home</span></a>
+            <a class="navbar-brand"  href="/feeding"><span>Feeding</span></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
+                   <!-- <li class="nav-item">
                         <a class="nav-link" href="/feeding">Feeding </a>
-                    </li>
+                    </li>-->
                     
                     
                     <li class="nav-item">
