--- a/views/feeding/feeding.ejs
+++ b/views/feeding/feeding.ejs
@@ -57,7 +57,7 @@
                         <td><%=data[i].weatherConditions%></td>
                         <td><%=data[i].keeperName%></td>
                         
-                        <td><a href="/feeding/Feedings?id=<%= data[i]._id %>"><img
+                        <td><a href="/feeding/updateFeedings?id=<%= data[i]._id %>"><img
                                     src="https://img.icons8.com/android/24/000000/edit.png" /></a> </td>
 
                         <td><a href="/feeding/deleteFeedings?id=<%= data[i]._id %>"
