--- a/views/feeding/updateFeedings.ejs
+++ b/views/feeding/updateFeedings.ejs
@@ -18,12 +18,13 @@
           <input type="hidden" name="id" value="<%=data._id%>" />
             <div class="form-group">
               <label for="dateTime"> dateTime</label>
-              <input type="date" class="form-control" id="dateTime" placeholder="Enter dateTime" name="dateTime">
+              <input type="date" class="form-control" id="dateTime" placeholder="Enter dateTime" name="dateTime"
+              >
             </div>
             <div class="form-group">
               <label for="animalId">Animal</label>
               <select required class="form-control" name="animalId">
-                  <option></option>
+                  <option value="<%=data.animalSpecies%>(<%=data.animalNickName%>)"></option>
                   <% for(var i=0; i<animals.length; i++) { %>
                       <option value="<%=animals[i]._id%>">
                           <%=animals[i].species%> - <%=animals[i].nickName%>
@@ -34,7 +35,7 @@
             <div class="form-group">
               <label for="food">Food</label>
               <select required class="form-control" name="food">
-                  <option></option>
+                  <option value="<%=data.food%>"></option>
                   <% for(var i=0; i<foods.length; i++) { %>
                       <option value="<%=foods[i].name%>">
                           <%=foods[i].name%>
@@ -46,7 +47,7 @@
             <div class="form-group">
               <label for="medicine">Medicine (Optional)</label>
               <select class="form-control" name="medicine">
-                  <option></option>
+                  <option value="<%=data.medicine%>"></option>></option>
                   <% for(var i=0; i<medicines.length; i++) { %>
                       <option value="<%=medicines[i].name%>">
                           <%=medicines[i].name%>
@@ -57,32 +58,39 @@
             
             <div class="form-group">
               <label for="goalWeightOfAnimal"> Goal Weight of Animal </label>
-              <input type="number" class="form-control" id="goalWeightOfAnimal" placeholder="Goal Weight of Animal" name="goalWeightOfAnimal">
+              <input type="number" class="form-control" id="goalWeightOfAnimal" placeholder="Goal Weight of Animal" name="goalWeightOfAnimal"
+              value="<%=data.goalWeightOfAnimal%>">
             </div>
             <div class="form-group">
               <label for="actualWeightOfAnimal"> Actual Weight of Animal</label>
-              <input type="number" class="form-control" id="actualWeightOfAnimal" placeholder="Actual Weight of Animal" name="actualWeightOfAnimal">
+              <input type="number" class="form-control" id="actualWeightOfAnimal" placeholder="Actual Weight of Animal" name="actualWeightOfAnimal"
+              value="<%=data.actualWeightOfAnimal%>">
             </div>
             <div class="form-group">
               <label for="amountOfFoodFed"> Amount of Food Fed</label>
-              <input type="number" class="form-control" id="amountOfFoodFed" placeholder="Amount of Food Fed" name="amountOfFoodFed">
+              <input type="number" class="form-control" id="amountOfFoodFed" placeholder="Amount of Food Fed" name="amountOfFoodFed"
+              value="<%=data.amountOfFoodFed%>">
             </div>
             <div class="form-group">
               <label for="leftoverFood"> Left Over Food</label>
-              <input type="number" class="form-control" id="leftoverFood" placeholder="leftoverFood" name="leftoverFood">
+              <input type="number" class="form-control" id="leftoverFood" placeholder="leftoverFood" name="leftoverFood"
+              value="<%=data.leftoverFood%>">
             </div>
             <div class="form-group">
               <label for="comments"> Comments</label>
-              <input type="text" class="form-control" id="comments" placeholder="comments" name="comments">
+              <input type="text" class="form-control" id="comments" placeholder="comments" name="comments" 
+              value="<%=data.comments%>">
             </div>
             <div class="form-group">
               <label for="weatherConditions"> Weather Conditions</label>
-              <input type="text" class="form-control" id="weatherConditions" placeholder="Weather Conditions" name="weatherConditions">
+              <input type="text" class="form-control" id="weatherConditions" placeholder="Weather Conditions" name="weatherConditions"
+              value="<%=data.weatherConditions%>">
             </div>
             
             <div class="form-group">
               <label for="keeperName"> keeper Name</label>
-              <input type="text" class="form-control" id="keeperName" placeholder="Keeper name" name="keeperName">
+              <input type="text" class="form-control" id="keeperName" placeholder="Keeper name" name="keeperName"
+              value="<%=data.keeperName%>">
             </div>
               
           <br>
