--- a/views/feeding/addFeedings.ejs
+++ b/views/feeding/addFeedings.ejs
@@ -53,19 +53,19 @@
           
           <div class="form-group">
             <label for="goalWeightOfAnimal"> Goal Weight of Animal </label>
-            <input type="number" class="form-control" id="goalWeightOfAnimal" placeholder="Goal Weight of Animal" name="goalWeightOfAnimal">
+            <input type="number" class="form-control" id="goalWeightOfAnimal" placeholder="Goal weight of animal" name="goalWeightOfAnimal">
           </div>
           <div class="form-group">
             <label for="actualWeightOfAnimal"> Actual Weight of Animal</label>
-            <input type="number" class="form-control" id="actualWeightOfAnimal" placeholder="Actual Weight of Animal" name="actualWeightOfAnimal">
+            <input type="number" class="form-control" id="actualWeightOfAnimal" placeholder="Actual weight of animal" name="actualWeightOfAnimal">
           </div>
           <div class="form-group">
             <label for="amountOfFoodFed"> Amount of Food Fed</label>
-            <input type="number" class="form-control" id="amountOfFoodFed" placeholder="Amount of Food Fed" name="amountOfFoodFed">
+            <input type="number" class="form-control" id="amountOfFoodFed" placeholder="Food in grams" name="amountOfFoodFed">
           </div>
           <div class="form-group">
             <label for="leftoverFood"> Left Over Food</label>
-            <input type="number" class="form-control" id="leftoverFood" placeholder="leftoverFood" name="leftoverFood">
+            <input type="number" class="form-control" id="leftoverFood" placeholder="Food in grams" name="leftoverFood">
           </div>
           <div class="form-group">
             <label for="comments"> Comments</label>
@@ -73,7 +73,18 @@
           </div>
           <div class="form-group">
             <label for="weatherConditions"> Weather Conditions</label>
-            <input type="text" class="form-control" id="weatherConditions" placeholder="Weather Conditions" name="weatherConditions">
+            <select class="form-control" name="weatherConditions">
+              <option></option>
+              <option>Sunny - Cold</option>
+              <option>Cloudy - Cold</option>
+              <option>Precipitation - Cold</option>
+              <option>Sunny - Mild</option>
+              <option>Cloudy - Mild</option>
+              <option>Precipitation - Mild</option>
+              <option>Sunny - Hot</option>
+              <option>Cloudy - Hot</option>
+              <option>Precipitation - Hot</option>
+          </select>
           </div>
           
           <div class="form-group">
