--- a/views/settings/settings.ejs
+++ b/views/settings/settings.ejs
@@ -18,8 +18,11 @@ and open the template in the editor.
         <a href="/medicines" class="btn btn-primary"> Medicine</a>
         <a href="/foodType" class="btn btn-primary"> Food Type</a>
         <br>
-        <h1>Application Settings </h1>
-        <a href="/user" class="btn btn-primary"> User</a>
+        <% if (locals.user.role=="admin") { %>
+            <h1>Application Settings </h1>
+            <a href="/user" class="btn btn-primary"> User</a>
+            <%}%>
+        
 
     </div>
     <% include ../partials/scripts%>
