--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -31,7 +31,17 @@
                     
                 </ul>
                 <ul class="nav navbar-nav float-md-right">
+
                     <% if (locals.user) { %>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" >
+                                Welcome <%=locals.user.firstName%>
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="/changePassword">Change password</a>
+                               </div>
+                        </li>
+                      
                         <li class="nav-item">
                           <a class="nav-link" href="/logout">Logout</a>
                         </li>
