--- a/views/changePassword.ejs
+++ b/views/changePassword.ejs
@@ -31,7 +31,7 @@ and open the template in the editor.
   
   
             <br>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" disabled>Submit</button>
           </form>
         </div>
     </div>
