--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
       <div class="col-sm-4">
 
         <br><br><br><br>
-        <h2>Welcom to Nature Reach</h2>
+        <h2>Welcome to Nature Reach</h2>
         <br>
 
           <!-- show any messages that come back with authentication -->
