--- a/views/feeding/feeding.ejs
+++ b/views/feeding/feeding.ejs
@@ -20,6 +20,7 @@
         </div>
         <div id="exportData">
             <div class="row">
+                <h5>Export Data</h5>
                 <form method="POST" action="/feeding/export">
                     <div class="form-group">
                         <label for="fromDate"> From Date</label>
