--- a/views/manageAccount/changePassword.ejs
+++ b/views/manageAccount/changePassword.ejs
@@ -5,10 +5,10 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <html>
-    <% include ./partials/header %>
-    <body>
-    
-        <% include ./partials/navbar %>
+  <% include ../partials/header %>
+
+  <body>
+    <% include ../partials/navbar %>
         <div class="container">
             <div class="row">
                 <div class= "col-sm-4">
@@ -22,11 +22,11 @@ and open the template in the editor.
             <div class="form-group">
               
               <label for="oldPassword">Old Password</label>
-              <input type="text" class="form-control" id="oldPassword" placeholder="Old password" name="oldPassword">
+              <input type="password" class="form-control" id="oldPassword" placeholder="Old password" name="oldPassword">
             </div>
             <div class="form-group">
                 <label for="newPassword">New Password</label>
-                <input type="text" class="form-control" id="newPassword" placeholder="New password" name="newPassword">
+                <input type="password" class="form-control" id="newPassword" placeholder="New password" name="newPassword">
               </div>
   
   
@@ -36,7 +36,7 @@ and open the template in the editor.
         </div>
     </div>
         </div>
-    <% include ./partials/scripts%>
+    <% include ../partials/scripts%>
     </body>
 
 </html>
