--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -40,7 +40,7 @@
                                 Welcome <%=locals.user.firstName%>
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="/changePassword">Change password</a>
+                                <a class="dropdown-item" href="/manageAccount">Manage Account</a>
                                </div>
                         </li>
                       
