--- a/views/manageAccount/changePassword.ejs
+++ b/views/manageAccount/changePassword.ejs
@@ -16,7 +16,7 @@ and open the template in the editor.
                 
         <h1>Change Password</h1>
 
-        <form method="POST" action="/changePassword">
+        <form method="POST" action="/manageAccount/changePassword">
             
   
             <div class="form-group">
@@ -31,7 +31,7 @@ and open the template in the editor.
   
   
             <br>
-            <button type="submit" class="btn btn-primary" disabled>Submit</button>
+            <button type="submit" class="btn btn-primary" >Submit</button>
           </form>
         </div>
     </div>
