--- a/views/manageAccount/manageAccount.ejs
+++ b/views/manageAccount/manageAccount.ejs
@@ -22,9 +22,9 @@ and open the template in the editor.
             </div>
             <div class="col-sm-4" style="border-style: groove;">
                 <h2>Account Details</h2>
-                <p><strong>FirstName: </strong> <%=locals.user.firstName%> </p>
-                <p><strong>LastName: </strong> <%=locals.user.lastName%></p>
-                <p><strong>Email: </strong> <%=locals.user.email%></p>
+                <p><strong>FirstName: </strong> <%=data.firstName%> </p>
+                <p><strong>LastName: </strong> <%=data.lastName%></p>
+                <p><strong>Email: </strong> <%=data.email%></p>
             </div>
             <div class="col-sm-1">
                 <a href="/manageAccount/updateAccountDetails"><img
