--- a/views/feeding/feeding.ejs
+++ b/views/feeding/feeding.ejs
@@ -41,18 +41,8 @@
                         </div>
 
                     </div>
-                    <p style="text-align: center;"> Or </p>
-                    <div class="form-check ">
-                        <div class="row">
-                            <div class="col-sm-5"></div>
-                            <div class="col-sm-4">
-                                <input type="checkbox" class="form-check-input" id="allData" name="allData">
-                                <label class="form-check-label" for="allData"> All Data</label>
-                            </div>
-
-                        </div>
-
-                    </div>
+                    <p style="text-align: center;">Note: Complete feedings data will be downloaded if date range is not selected </p>
+                    
                     <div class="form-group">
                         <p><strong>Select File Type :</strong></p>
                         <div class=" justify-content-center">
