--- a/views/user/updateUser.ejs
+++ b/views/user/updateUser.ejs
@@ -12,7 +12,9 @@
       <div class="col-sm-5">
         <h3>Update User</h3>
         <br>
-
+        <% if (errormessage.length > 0) { %>
+          <div class="alert alert-danger"><%= errormessage %></div>
+          <% } %>
 
         <form method="POST" action="/user/updateUser">
           <input type="hidden" name="id" value="<%=data._id%>" />
@@ -22,7 +24,7 @@
             <input type="text" class="form-control" id="email" placeholder="Enter Email ID" name="email"
               value="<%= data.email %>">
           </div>
-          
+
           <div class="form-group">
             <label for="firstName">First Name</label>
             <input type="text" class="form-control" id="firstName" placeholder="First Name" name="firstName"
@@ -37,13 +39,13 @@
 
           <div class="form-group">
             <label for="role">Role</label>
-                <select class="custom-select" name="role" required>
-                  <option><%= data.role %></option>
-                    <option value="admin" >admin</option>
-                    <option value="user" >user</option>
+            <select class="custom-select" name="role" required>
+              <option><%= data.role %></option>
+              <option value="admin">admin</option>
+              <option value="user">user</option>
 
-                </select>
-            
+            </select>
+
           </div>
 
 
@@ -51,6 +53,11 @@
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
 
+        <br><br>
+
+      </div>
+      <div class="col-sm-4">
+        <a href="/user/changeUserPassword">Change Password</a>
       </div>
     </div>
   </div>
