--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,48 +3,51 @@
 
 <% include ./partials/header%>
 
-<body>
+<body style="background-image:url('/images/bachgroung-image_1.jpg');">
 
-  <div class="row">
-    <div class="col-sm-7">
-      <img src="/images/frontPage.PNG" width="700" height="650" alt="Nature Reach">
+  <div class="container">
+    <br><br><br><br>
+    <div class="row" >
+      <div class="col-sm-7">
+        <img src="/images/frontPage.PNG" width="650" height="550" alt="Nature Reach">
 
-    </div>
-    
+      </div>
 
-      <div class="col-sm-4">
+
+      <div class="col-sm-4" >
 
         <br><br><br><br>
         <h2>Welcome to Nature Reach</h2>
         <br>
 
-          <!-- show any messages that come back with authentication -->
-          <% if (message.length > 0) { %>
-          <div class="alert alert-danger"><%= message %></div>
-          <% } %>
+        <!-- show any messages that come back with authentication -->
+        <% if (message.length > 0) { %>
+        <div class="alert alert-danger"><%= message %></div>
+        <% } %>
 
-          <!-- LOGIN FORM -->
-          <form action="/" method="post">
-              <div class="form-group">
-                  <label>Email</label>
-                  <input required type="text" class="form-control" name="email">
-              </div>
-              <div class="form-group">
-                  <label>Password</label>
-                  <input required type="password" class="form-control" name="password">
-              </div>
-              <button type="submit" class="btn btn-warning btn-lg">Login</button>
-          </form>
+        <!-- LOGIN FORM -->
+        <form action="/" method="post">
+          <div class="form-group">
+            <label><strong>Email:</strong></label>
+            <input required type="text" class="form-control" name="email">
+          </div>
+          <div class="form-group">
+            <label>Password</label>
+            <input required type="password" class="form-control" name="password">
+          </div>
+          <button type="submit" class="btn btn-warning btn-lg">Login</button>
+        </form>
 
-          <hr>
-        
+        <hr>
+
       </div>
-  
+
+    </div>
   </div>
 
   <% include ./partials/scripts%>
 
-  
+
 </body>
 
 </html>
