--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 
 <% include ./partials/header%>
 
-<body style="background-image:url('/images/bachgroung-image_1.jpg');">
+<body>
 
   <div class="container">
     <br><br><br><br>
@@ -14,7 +14,7 @@
       </div>
 
 
-      <div class="col-sm-4" >
+      <div class="col-sm-5" >
 
         <br><br><br><br>
         <h2>Welcome to Nature Reach</h2>
@@ -32,7 +32,7 @@
             <input required type="text" class="form-control" name="email">
           </div>
           <div class="form-group">
-            <label>Password</label>
+            <label><strong>Password:</strong></label>
             <input required type="password" class="form-control" name="password">
           </div>
           <button type="submit" class="btn btn-warning btn-lg">Login</button>
