--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,21 +3,18 @@
 
 <% include ./partials/header%>
 
-<body>
+<body style="background-image: url('/images/imgFrontpage.PNG');">
 
   <div class="container">
     <br><br><br><br>
     <div class="row" >
-      <div class="col-sm-7">
-        <img src="/images/frontPage.PNG" width="650" height="550" alt="Nature Reach">
-
-      </div>
+      <div class="col-sm-8"></div>
 
 
-      <div class="col-sm-5" >
+      <div class="col-sm-4" >
 
         <br><br><br><br>
-        <h2>Welcome to Nature Reach</h2>
+        <h3>Welcome to Nature Reach</h3>
         <br>
 
         <!-- show any messages that come back with authentication -->
