--- a/views/user/updateUser.ejs
+++ b/views/user/updateUser.ejs
@@ -48,6 +48,12 @@
 
           </div>
 
+          <div class="form-group">
+            <label for="newPassword">New Password (Note: Enter to change password)</label>
+            <input type="password" class="form-control" id="newPassword" placeholder="New password" name="newPassword"
+           >
+          </div>
+
 
           <br>
           <button type="submit" class="btn btn-primary">Submit</button>
@@ -56,9 +62,7 @@
         <br><br>
 
       </div>
-      <div class="col-sm-4">
-        <a href="/user/changeUserPassword">Change Password</a>
-      </div>
+      
     </div>
   </div>
   <% include ../partials/scripts%>
