--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,13 +3,17 @@
 
 <% include ./partials/header%>
 
-<body style="background-image: url('/images/imgFrontpage.PNG');">
+<body style="background-image: url('/images/frontPageBackground.PNG');">
 
-  <div class="container">
+  
+
     <br><br><br><br>
     <div class="row" >
-      <div class="col-sm-8"></div>
-
+      
+      <div class="col-sm-7" id="imgsetting">
+        <img src="/images/natureReachfornpage.png" width="800" height="550" alt="Nature Reach">
+  
+      </div>
 
       <div class="col-sm-4" >
 
@@ -40,7 +44,7 @@
       </div>
 
     </div>
-  </div>
+  
 
   <% include ./partials/scripts%>
 
